--- a/packages/system/public/views/supplier-invoice-form.html
+++ b/packages/system/public/views/supplier-invoice-form.html
@@ -28,7 +28,7 @@
           <div class="form-group"> 
           <label class="control-label">Already uploaded file</label> 
          <label class="btn btn-default btn-file pull-right">
-         <a target="_blank" href="http://material125-legitaccess.rhcloud.com/images/{{user.document_added}}">View File</a>
+         <a target="_blank" href="/images/{{user.document_added}}">View File</a>
          <input type="hidden" name="pr_doc" value="{{user.document_added}}" />
    <!-- <input type="text" name="file_uploaded" ng-model="user.document_added" readonly="readonly"  style="border:none">-->
 </label> 
